--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = emusica
-version = 0.0.4
+version = 0.0.5
 author= MGCcoder
 description = Extrae música que está unida en un solo archivo y agrega sus metadatos
 long_description = file: README.md
@@ -10,6 +10,8 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: Unix
+    Operating System :: Microsoft :: Windows
+    Operating System :: MacOS
 
 [options]
 package = find:
