--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = emusica
-version = 0.0.5
+version = 0.0.6
 author= MGCcoder
-description = Extrae música que está unida en un solo archivo y agrega sus metadatos
+description = Extrae música que está unida en un solo archivo y permite agregar sus metadatos
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/MGCcoder/extractor-de-musica
