Modificaciones en la descripsión

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = emusica
 version = 0.0.7
 author= MGCcoder
-description = Extrae música que está unida en un solo archivo y permite agregar sus metadatos
+description = Extrae las pistas de canciones que están unidas en un solo archivo y permite agregar sus metadatos
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/MGCcoder/extractor-de-musica
